// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the App components renders the App correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav>
        <div
          class="logo-conatiner"
        >
          <img
            alt="logo"
            class="nav-logo"
            src="planetColors.png"
          />
          <h1
            class="nav-h1"
          >
            Space Travelers Hub
          </h1>
        </div>
        <ul
          class="nav-ul"
        >
          <li
            class="nav-li"
          >
            <a
              aria-current="page"
              class="nav-link activated"
              href="#/"
            >
              Rockets
            </a>
          </li>
          <li
            class="nav-li"
          >
            <a
              class="nav-link"
              href="#/missions"
            >
              Missions
            </a>
          </li>
          <span>
            |
          </span>
          <li
            class="nav-li"
          >
            <a
              class="nav-link"
              href="#/myProfile"
            >
              My profile
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="container"
      >
        <div
          class="rockets-container"
        >
          <ul
            class="rockets-ul-container"
          >
            <li
              class="rocket-container"
              id="1"
            >
              <div
                class="img-container"
              >
                <img
                  alt="logo"
                  src="https://imgur.com/DaCfMsj.jpg"
                />
              </div>
              <div
                class="info-container"
              >
                <h2>
                  Falcon 1
                </h2>
                <div
                  class="description"
                >
                  <span>
                     
                  </span>
                  The Falcon 1 was an expendable launch system privately developed and manufactured by SpaceX during 2006-2009. On 28 September 2008, Falcon 1 became the first privately-developed liquid-fuel launch vehicle to go into orbit around the Earth.
                </div>
                <div>
                  <button
                    class="rocket-reserve"
                    type="button"
                  >
                    Reserve Rocket
                  </button>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <nav>
      <div
        class="logo-conatiner"
      >
        <img
          alt="logo"
          class="nav-logo"
          src="planetColors.png"
        />
        <h1
          class="nav-h1"
        >
          Space Travelers Hub
        </h1>
      </div>
      <ul
        class="nav-ul"
      >
        <li
          class="nav-li"
        >
          <a
            aria-current="page"
            class="nav-link activated"
            href="#/"
          >
            Rockets
          </a>
        </li>
        <li
          class="nav-li"
        >
          <a
            class="nav-link"
            href="#/missions"
          >
            Missions
          </a>
        </li>
        <span>
          |
        </span>
        <li
          class="nav-li"
        >
          <a
            class="nav-link"
            href="#/myProfile"
          >
            My profile
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="container"
    >
      <div
        class="rockets-container"
      >
        <ul
          class="rockets-ul-container"
        >
          <li
            class="rocket-container"
            id="1"
          >
            <div
              class="img-container"
            >
              <img
                alt="logo"
                src="https://imgur.com/DaCfMsj.jpg"
              />
            </div>
            <div
              class="info-container"
            >
              <h2>
                Falcon 1
              </h2>
              <div
                class="description"
              >
                <span>
                   
                </span>
                The Falcon 1 was an expendable launch system privately developed and manufactured by SpaceX during 2006-2009. On 28 September 2008, Falcon 1 became the first privately-developed liquid-fuel launch vehicle to go into orbit around the Earth.
              </div>
              <div>
                <button
                  class="rocket-reserve"
                  type="button"
                >
                  Reserve Rocket
                </button>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test the App components renders the Missions page correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="container"
        >
          <table
            class="table"
          >
            <tbody>
              <tr>
                <th
                  class="head"
                >
                  Missions
                </th>
                <th
                  class="head"
                >
                  Description
                </th>
                <th
                  class="head"
                >
                  Status
                </th>
                <th
                  class="head"
                >
                  Action
                </th>
              </tr>
              <tr>
                <th>
                  Thaicom
                </th>
                <th>
                  Thaicom is the name of a series of communications satellites operated from Thailand, and also the name of Thaicom Public Company Limited, which is the company that owns and operates the Thaicom satellite fleet and other telecommunication businesses in Thailand and throughout the Asia-Pacific region. The satellite projects were named Thaicom by the King of Thailand, His Majesty the King Bhumibol Adulyadej, as a symbol of the linkage between Thailand and modern communications technology.
                </th>
                <td>
                  <span>
                    <span
                      class="not-member"
                    >
                      NOT A MEMBER
                    </span>
                  </span>
                </td>
                <td>
                  <button
                    class="action"
                    type="button"
                  >
                    Join Mission
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="container"
      >
        <table
          class="table"
        >
          <tbody>
            <tr>
              <th
                class="head"
              >
                Missions
              </th>
              <th
                class="head"
              >
                Description
              </th>
              <th
                class="head"
              >
                Status
              </th>
              <th
                class="head"
              >
                Action
              </th>
            </tr>
            <tr>
              <th>
                Thaicom
              </th>
              <th>
                Thaicom is the name of a series of communications satellites operated from Thailand, and also the name of Thaicom Public Company Limited, which is the company that owns and operates the Thaicom satellite fleet and other telecommunication businesses in Thailand and throughout the Asia-Pacific region. The satellite projects were named Thaicom by the King of Thailand, His Majesty the King Bhumibol Adulyadej, as a symbol of the linkage between Thailand and modern communications technology.
              </th>
              <td>
                <span>
                  <span
                    class="not-member"
                  >
                    NOT A MEMBER
                  </span>
                </span>
              </td>
              <td>
                <button
                  class="action"
                  type="button"
                >
                  Join Mission
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test the App components renders the MyProfile page correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="container"
        >
          <section
            class="missions"
          >
            <h2>
              My Missions
            </h2>
            <table
              class="missions-table"
            >
              <tbody />
            </table>
          </section>
          <section
            class="rockets"
          >
            <h2>
              My Rockets
            </h2>
            <div>
              <p>
                Your booked Rockets will appear here
              </p>
            </div>
          </section>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="container"
      >
        <section
          class="missions"
        >
          <h2>
            My Missions
          </h2>
          <table
            class="missions-table"
          >
            <tbody />
          </table>
        </section>
        <section
          class="rockets"
        >
          <h2>
            My Rockets
          </h2>
          <div>
            <p>
              Your booked Rockets will appear here
            </p>
          </div>
        </section>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test the App components renders the Rockets page correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="rockets-container"
        >
          <ul
            class="rockets-ul-container"
          >
            <li
              class="rocket-container"
              id="1"
            >
              <div
                class="img-container"
              >
                <img
                  alt="logo"
                  src="https://imgur.com/DaCfMsj.jpg"
                />
              </div>
              <div
                class="info-container"
              >
                <h2>
                  Falcon 1
                </h2>
                <div
                  class="description"
                >
                  <span>
                     
                  </span>
                  The Falcon 1 was an expendable launch system privately developed and manufactured by SpaceX during 2006-2009. On 28 September 2008, Falcon 1 became the first privately-developed liquid-fuel launch vehicle to go into orbit around the Earth.
                </div>
                <div>
                  <button
                    class="rocket-reserve"
                    type="button"
                  >
                    Reserve Rocket
                  </button>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="rockets-container"
      >
        <ul
          class="rockets-ul-container"
        >
          <li
            class="rocket-container"
            id="1"
          >
            <div
              class="img-container"
            >
              <img
                alt="logo"
                src="https://imgur.com/DaCfMsj.jpg"
              />
            </div>
            <div
              class="info-container"
            >
              <h2>
                Falcon 1
              </h2>
              <div
                class="description"
              >
                <span>
                   
                </span>
                The Falcon 1 was an expendable launch system privately developed and manufactured by SpaceX during 2006-2009. On 28 September 2008, Falcon 1 became the first privately-developed liquid-fuel launch vehicle to go into orbit around the Earth.
              </div>
              <div>
                <button
                  class="rocket-reserve"
                  type="button"
                >
                  Reserve Rocket
                </button>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
